fix images size

--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
 		"devbuild": "gulp build --build --nowebp",
 		"noimgbuild": "gulp build --build --noimgopt",
 		"tmp": "gulp -f gulpfile.tmp.js",
-		"bem": "fls-bemtree-from-html"
+		"bem": "fls-bemtree-from-html",
+		"ghpages": "gulp build --build && gh-pages -d dist"
 	},
 	"devDependencies": {
 		"@babel/cli": "latest",
@@ -37,6 +38,7 @@
 		"eslint-plugin-react-refresh": "latest",
 		"file-include-webpack-plugin-replace": "latest",
 		"file-loader": "^6.2.0",
+		"gh-pages": "^6.1.1",
 		"gulp": "latest",
 		"gulp-autoprefixer": "latest",
 		"gulp-clean-css": "latest",
